<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doska00_1"
    android:textStyle="bold"
    app:titleTextColor="@color/main_txt"
    tools:context=".MainActivity"
    tools:ignore="LabelFor">

    <RadioGroup
        android:id="@+id/rg_pr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tv_prod"
        app:layout_constraintTop_toBottomOf="@+id/tv_prod">

        <RadioButton
            android:id="@+id/rb_m3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_m3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_m2"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_m"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_dsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_dsk"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_razm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_header"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tb" />

    <TextView
        android:id="@+id/tv_edizm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txt_edizm"
        android:textColor="@color/main_txt"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_razm"
        app:layout_constraintStart_toEndOf="@+id/tv_razm" />

    <TextView
        android:id="@+id/tv_shirina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_shirina"
        android:textColor="@color/main_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_razm" />

    <EditText
        android:id="@+id/et_shirina"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/main_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_shirina"
        app:layout_constraintTop_toBottomOf="@+id/tv_shirina"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
<!--
Свалка
        android:background="@color/col_input"
-->
    <TextView
        android:id="@+id/tv_vysota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_vysota"
        android:textColor="@color/main_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_shirina"
        app:layout_constraintTop_toBottomOf="@+id/tv_razm" />

    <EditText
        android:id="@+id/et_vysota"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:hint="@string/mynul"
        android:textColor="@color/main_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_vysota"
        app:layout_constraintTop_toBottomOf="@+id/tv_vysota"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_dlina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_dlina"
        android:textColor="@color/main_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_vysota"
        app:layout_constraintTop_toBottomOf="@+id/tv_razm" />

    <EditText
        android:id="@+id/et_dlina"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="end"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:hint="@string/mynul"
        android:textColor="@color/main_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_dlina"
        app:layout_constraintTop_toBottomOf="@+id/tv_dlina"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tv_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_prodza"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dlina" />

    <RadioGroup
        android:id="@+id/rg_nugno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tv_vol"
        app:layout_constraintTop_toBottomOf="@+id/tv_vol">

        <RadioButton
            android:id="@+id/rb_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_m3"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_m2"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_nupm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_m"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_nudsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_dsk"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_price"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_pr" />

    <TextView
        android:id="@+id/tv_prza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txt_m3"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/tv_price" />


    <EditText
        android:id="@+id/et_price"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="end"
        android:hint="@string/mynul"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_prza"
        app:layout_constraintTop_toTopOf="@+id/tv_price"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/txt_nugno"
        android:textColor="@color/main_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <TextView
        android:id="@+id/tv_nugnoza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/txt_m3"
        android:textColor="@color/main_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/et_vol"
        app:layout_constraintTop_toTopOf="@+id/et_vol" />


    <EditText
        android:id="@+id/et_vol"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="end"
        android:hint="@string/mynul"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/main_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_vol"
        app:layout_constraintTop_toTopOf="@+id/tv_vol"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/col_input"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_nugno">

        <TextView
            android:id="@+id/tv_titl_sum"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/txt_itog"
            android:textColor="@color/main_txt"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_rezsum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="10000"
            android:textColor="@color/main_txt"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/txt_val"
            android:textColor="@color/main_txt"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/col_rez"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@color/col_input"
            android:gravity="center_horizontal"
            android:text="@string/txt_grid_title"
            android:textColor="@color/main_txt"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:gravity="center_horizontal"
                android:text="@string/txt_m3"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:gravity="center_horizontal"
                android:text="@string/txt_m2"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:gravity="center_horizontal"
                android:text="@string/txt_m"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:gravity="center_horizontal"
                android:text="@string/txt_dsk"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_rez_m3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="15000.0"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_rez_m2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:layout_weight="1"
                android:gravity="end"
                android:text="750.0"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_rez_pm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:layout_weight="1"
                android:gravity="end"
                android:text="75.0"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_rez_dsk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@color/col_input"
                android:layout_weight="1"
                android:gravity="end"
                android:text="450.0"
                android:textColor="@color/main_txt"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>